2003-03-21  Alif Wahid	<awah005@users.sourceforge.net>

	Updated remaining example programs that
	used PyGtkGLTemplate module to now use
	the gtk.gtkgl.apputils module.

	* examples/Shapes.py
	* examples/teapot2.py

	Some cleanup of other examples.

	* examples/MoveLight.py
	* examples/NeHe6Multi.py
	* examples/SimpleScene.py

	Finally, removed the PyGtkGLTemplate module.

	* examples/PyGtkGLTemplate.py: removed.

2003-03-19  Alif Wahid	<awah005@users.sourceforge.net>

	Updated following example programs to use
	the gtk.gtkgl.apputils module.

	* examples/NeHe6Multi.py
	* examples/SimpleScene.py
	* examples/MoveLight.py

2003-03-19  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* examples/teapot.py (realize): Clear color and depth.

	* setup.py.in:
	* gtk/gdkgl/Makefile.am:
	* gtk/gtkgl/Makefile.am: Changed extension module file names to
	_gdkgl.so and _gtkgl.so.

2003-03-17  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* gtk/gtkgl/widget.py: Widget subclasses built-in object class,
	and restricts instantiation.

2003-03-17  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* gtk/gtkgl/apputils.py: Added new add-on module which is based on
	PyGtkGLTemplate.py written by Alif. It provides GLScene, GLArea,
	and GLApplication classes which reduces programmers' work.

2003-03-17  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	Added new example programs contributed by Alif Wahid.
	Thank you, Alif ;-)

	* examples/NeHe6Multi.py: 
	* examples/Shapes.py: 

2003-03-14  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	Added new example programs contributed by Alif Wahid.
	Thank you, Alif ;-)

	* examples/teapot2.py: Revised version of teapot.py using the
	template.
	* examples/MoveLight.py: A demo ported from PyOpenGL and PyGLUT.
	* examples/SimpleScene.py: A demo ported from PyOpenGL and PyGLUT.
	* examples/PyGtkGLTemplate.py: Generic interface class and a
	OpenGL widget.

2003-03-10  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* Version 0.0.2